<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ta.d3ti.wisnupamungkas.rekammediskeluarga.UpdateFotoAnakActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/com_facebook_messenger_blue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="55dp"
        android:background="@color/material_grey_300"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_choose_file"
            android:id="@+id/buttonChoose"
            android:background="@color/com_facebook_messenger_blue"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/foto_profil_pria"
            android:background="@drawable/rounded_corner_content"
            android:layout_weight="1"
            android:id="@+id/imageView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_upload_image"
            android:id="@+id/buttonUpload"
            android:textColor="@color/white"
            android:background="@color/material_deep_teal_500"
            android:textStyle="bold" />


        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cancel"
            android:id="@+id/buttonCancel"
            android:textColor="@color/white"
            android:background="@color/btn_logut_bg"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
