<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    tools:context="com.ta.d3ti.wisnupamungkas.rekammediskeluarga.RegisterUserActivity"
    android:background="@color/switch_thumb_normal_material_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Data User"
            android:id="@+id/textRegisterUser"
            android:background="@android:color/holo_red_light"
            android:focusable="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentEnd="false"
            android:fillViewport="false"
            android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/form_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:focusableInTouchMode="false"
            android:background="@color/primary_text_disabled_material_light"
            android:layout_below="@+id/textRegisterUser"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/nik"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_nik"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_margin="10dp"
                android:maxLength="16" />

            <EditText
                android:id="@+id/tgl_lahir"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_tgl_lahir"
                android:inputType="date"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_margin="10dp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioJk">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_pria"
                    android:id="@+id/radioPria"
                    android:checked="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:layout_gravity="left" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_perempuan"
                    android:id="@+id/radioPerempuan"
                    android:checked="false"
                    android:textSize="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/radioPria"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp" />

            </RadioGroup>

            <EditText
                android:id="@+id/no_hp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_hp"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_margin="10dp"
                android:maxLength="12" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/provinsi"
                android:textColor="@color/input_login"
                android:spinnerMode="dialog"
                android:layout_marginLeft="5dp" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/kabupaten"
                android:textColor="@color/input_login"
                android:spinnerMode="dialog"
                android:layout_marginLeft="5dp" />

            <EditText
                android:id="@+id/alamat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_alamat"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:layout_margin="10dp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp" />


            <Button
                android:id="@+id/button_register"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/material_deep_teal_500"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Register"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:focusable="false" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:id="@+id/button_cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/holo_orange_light"
                android:padding="10dp"
                android:text="Cancel"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
