<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ta.d3ti.wisnupamungkas.rekammediskeluarga.UpdateProfilPerempuanActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/com_facebook_messenger_blue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Update Data Perempuan"
            android:id="@+id/textUpdatePerempuan"
            android:background="@android:color/holo_red_light"
            android:focusable="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentEnd="false"
            android:fillViewport="false"
            android:layout_below="@+id/textUpdatePerempuan">

            <LinearLayout
                android:id="@+id/form_update_perempuan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="false"
                android:background="@color/primary_text_disabled_material_light">

                <EditText
                    android:id="@+id/nama_perempuan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hint_nama"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"
                    android:layout_margin="10dp"
                    android:maxLength="30" />

                <EditText
                    android:id="@+id/tgl_lahir_perempuan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hint_tgl_lahir"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"
                    android:layout_margin="10dp" />

                <EditText
                    android:id="@+id/no_hp_perempuan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hint_hp"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"
                    android:layout_margin="10dp"
                    android:maxLength="12" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/provinsi"
                    android:textColor="@color/input_login"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/kabupaten"
                    android:textColor="@color/input_login"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="11dp" />

                <EditText
                    android:id="@+id/alamat_perempuan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hint_alamat"
                    android:inputType="textPostalAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint"
                    android:layout_margin="10dp" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="20dp" />


                <Button
                    android:id="@+id/btn_update_perempuan"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/material_deep_teal_500"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Update"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:focusable="false" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <Button
                    android:id="@+id/btn_cancel_perempuan"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_light"
                    android:padding="10dp"
                    android:text="Cancel"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
